# autotone

./: .gitignore  .gitmodules  BufferProcessor.bundle.js  BufferProcessor.bundle.js.map  LICENSE.txt  README.md  crepeWorker.bundle.js  crepeWorker.bundle.js.LICENSE.txt  crepeWorker.bundle.js.map  index.bundle.js  index.bundle.js.LICENSE.txt  index.bundle.js.map  index.css  index.html  tunerWasm.wasm  tunerWorker.bundle.js  tunerWorker.bundle.js.map  wasmBuild.js  wasmBuild.wasm
autotone-react/: Makefile  package-lock.json  package.json
autotone-react/public/: index.html
autotone-react/src/audio/: bufferToBase64.js  recorder.js
autotone-react/src/components/App/: App.js
autotone-react/src/wasm/: tunerApiWrapper.js
autotone_react/: Makefile
autotone_react/src/: index.js
autotone_react/src/audio/: player.js  wavBuilder.js
autotone_react/src/components/App/: App.js
autotone_react/src/wasm/: tunerApiWrapper.js
autotone_web/: Makefile  index.html  package-lock.json  package.json  webpack.config.js  webpack.js
autotone_web/src/: index.html  index.js  oldindex.js
autotone_web/src/audio/autotone/: Autotoner.js  autotoneConstants.js
autotone_web/src/audio/pitchDetection/: crepe.js  crepeApi.js  crepeConstants.js  crepeWorker.js  crepeWorkerApi.js
autotone_web/src/audio/pitchShifting/: tuner.js  tuner.worker.js  tunerApi.js  tunerConstants.js
autotone_web/src/audio/player/: player.js
autotone_web/src/audio/recorder/: BufferNode.js  BufferProcessor.js  PitchNode.js  PitchProcessor.js  recorder.js
autotone_web/src/components/App/: App.css  App.js
autotone_web/src/components/Chart/: Chart.css  Chart.js
autotone_web/src/components/Player/: Player.css  Player.js
autotone_web/src/components/Record/: Record.css  Record.js
autotone_web/src/components/Settings/: Settings.css  Settings.js
autotone_web/src/components/shared/Button/: Button.js
autotone_web/src/components/shared/Card/: Card.css  Card.js
autotone_web/src/components/shared/Select/: Select.js
autotone_web/src/components/shared/Text/: Text.css  Text.js
autotone_web/src/util/: tensorFlowUtils.js  typedArrayUtils.js
autotone_web/src/utils/: reactUtils.js  wasmUtils.js  webWorkerUtils.js
autotone_web/webpack/: webpack.config.js  webpack.workerConfig.js
jupyter/: reaper_python.ipynb  voice.ipynb  voice_utils.py
react/: package-lock.json  package.json  webpack.config.js
react/src/: index.html
react/src/audio/autotone/: Autotoner.js
react/src/audio/music/: musicScales.js
react/src/audio/pitchDetection/: crepe.js  crepeApi.js  crepeConstants.js
react/src/audio/pitchShifting/: tunerApi.js  tunerConstants.js
react/src/audio/recorder/: recorder.js
react/src/components/App/: App.css  App.js
react/src/components/Chart/: Chart.js
react/src/components/Player/: Player.css  Player.js
react/src/components/Record/: Record.css  Record.js
react/src/components/Settings/: Settings.css  Settings.js
react/src/components/shared/Button/: Button.css  Button.js
react/src/components/shared/Card/: Card.css  Card.js
react/src/components/shared/Select/: Select.css  Select.js
react/src/components/shared/Text/: Text.css
react/src/utils/: ioUtils.js  wasmUtils.js
react/static/: index.css  index.html  index.js
reaper/: CMakeLists.txt  reaper_api.h  reaper_c_api.cc
scripts/: bootstrap.sh  build.sh  build_reaper.sh  build_smb_pitch_shifter.sh  build_tuner.sh  build_wasm.sh  build_wasm_dev.sh  build_wasm_prod.sh  deploy.sh  launch_jupyter.sh  make_reaper.sh  test_reaper.sh  test_tuner.sh
smb_pitch_shifter/: CMakeLists.txt  dsp.c  dsp.h  fft_smb.c  fft_smb.h  smb_api.c  smb_api.h
tests/: test_tuner.py
tuner/: CMakeLists.txt  Makefile  tuner.c  tuner_api.c  tuner_api_wrapper.py  tuner_utils.c  tuner_utils.h
tuner/kiss_fft/: kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h
tuner/smb_pitch_shift/: dsp.c  dsp.h  fft_smb.c  fft_smb.h  smb_api.c
